fixed mobile spacing

--- a/styles.css
+++ b/styles.css
@@ -227,6 +227,7 @@ h1, h3, p {
         padding: 4px;
         border-radius: 4px;
         justify-content: center;
+        margin-top: 0;
     }
     
     .contact {
